package ar.edu.utn.frc.tup.lciii.proyectoconspringn1.models;

public enum MatchStatus {
    STARTED,
    FINISHED,
    CANCELED;
}
