package ar.edu.utn.frc.tup.lciii.proyectoconspringn1.models;

/**
 * Interfaz que representa una jugada genérica en el sistema.
 * Las clases que implementan esta interfaz definirán los detalles específicos de cada tipo de jugada.
 */
public interface Play {
    // Esta interfaz no tiene métodos definidos ya que solo sirve como marcador o abstracción general.
    // Las implementaciones concretas de las jugadas (como PlayRps) definirán sus propios métodos y propiedades.

}
