package ar.edu.utn.frc.tup.lciii.proyectoconspringn1.models.rps;

public enum ShapeHand {
    ROCK, SCISSOR, PAPER;
}
