@startuml
class Player{
Long id
String userName
String password
String email
String avatar
LocalDateTime lastLoginDate
}

class Game{
Long id
String code
String name
String description
String rules
}
 abstract Match{
Long id
Game game
Player player
LocalDateTime createdDate
MatchStatus status
}
class MatchRps{
Integer numberOfPlays;
Integer remainderPlays;
Integer player1Score;
Integer player2Score;
List<PlayRps> plays;
Long winnerId;
}
interface Play{
}

class PlayRps{
Long id;
Long matchRpsId;
ShapeHand shapeHandPlayer1;
ShapeHand shapeHandPlayer2;
Long winnerId;
}
enum ShapeHand{
ROCK
SCISSORS
PAPER
}

enum MatchStatus{
STARTED
FINISH
CANCELED
}

MatchStatus --* Match
Game --* Match
Player --* Match
Match <|-- MatchRps
MatchRps *-- PlayRps
PlayRps *-l- ShapeHand
PlayRps -r-|> Play
@enduml